--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
-                                </h5>
+                                <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
+                                </h6.>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Perforaciones para agua
                                     potable e industrias. Estudio de suelo, geotecnia.</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
