--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </div>
     <!-- Service End -->
 
-    <div class="text-center wow fadeInUp" data-wow-delay="0.1s" img src="i">
+    <div class="text-center wow fadeInUp" data-wow-delay="0.1s" >
 
         <h1 class="mb-5" id="agua">AGUA</h1>
         <p><b> ESTUDIO DE CALIDAD DE AGUA SUBTERRÁNEA . </b></p>
