--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                             <div class="col-10 col-lg-8">
                                 <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
                                 </h6.>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Perforaciones para agua
-                                    potable e industrias. Estudio de suelo, geotecnia.</h1>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Perforaciones para agua
+                                    potable e industrias. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
                                     cotización.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
@@ -113,8 +113,8 @@
                             <div class="col-10 col-lg-8">
                                 <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
                                 </h6.>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Perforaciones para agua
-                                    potable e industrias. Estudio de suelo, geotecnia.</h1>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Perforaciones para agua
+                                    potable e industrias. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
                                     cotización.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
@@ -145,13 +145,13 @@
 
                     <h1 class="mb-5">Nos dedicamos a brindar:</h1>
                     <ul>
-                        <li>Estudios geológicos en suelo y ROCAS para diferentes obras e infraestructuras, con el
+                        <li>Estudios geológicos en suelo y rocas para diferentes obras e infraestructuras, con el
                             objetivo de garantizar la seguridad, estabilidad y durabilidad de las estructuras.</li>
                         <li>Ofrecemos el servicio de perforaciones para pozos de agua, como así también los análisis
                             geoquímicos.</li>
-                        <li>RIESGOS GEOLOGICOS.</li>
-                        <li>IMPACTO AMBIENTAL.</li>
-                        <li>HIDROLOGÍA</li>
+                        <li>Riesgos geológicos.</li>
+                        <li>Impacto ambiental.</li>
+                        <li>Hidrología.</li>
                         <li>Estudios petrológicos para la descripción y clasificación de rocas mediante microscopía.
                         </li>
                     </ul>
