--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                                     potable e industrias. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
                                     cotización.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
+                                <a href="#servicios" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
                                     Información</a>
-                                <a href=""
+                                <a href="#contacto"
                                     class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contactanos</a>
                             </div>
                         </div>
@@ -117,9 +117,9 @@
                                     potable e industrias. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
                                     cotización.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
+                                <a href="#servicios" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
                                     Información</a>
-                                <a href=""
+                                <a href="#contacto"
                                     class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contactanos</a>
                             </div>
                         </div>
