--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GEOGON</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>GEOGON - Soluciones Geológicas, Estudio de Suelo y Geotecnia</title>
+<meta name="description" content="Expertos en estudio de suelo, geotecnia y perforaciones para agua potable e industrias. Contáctanos para cotizaciones y asesoría.">
+<meta name="keywords" content="geología, estudio de suelo, geotecnia, perforaciones de agua, análisis geoquímicos, hidrología">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -31,7 +31,29 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" media="print" onload="this.media='all'">
+
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "GEOGON",
+          "description": "Empresa especializada en geotecnia, estudio de suelos y perforaciones de agua.",
+          "url": "https://geogonsg.com",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Córdoba, Argentina"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+54 3571 602038",
+            "contactType": "customer service"
+          }
+        }
+        </script>
+        
+
 </head>
 
 <body>
@@ -83,14 +105,14 @@
     <div class="container-fluid p-0 pb-5">
         <div class="owl-carousel header-carousel position-relative mb-5">
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                <img class="img-fluid" src="img/carousel-1.jpg" alt="muestreo de suelo en argentina" loading="lazy">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-pt-5"
                     style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
-                                </h6.>
+                                <!-- <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
+                                </h6.> -->
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Perforaciones para agua
                                     potable e industrias. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
@@ -105,14 +127,14 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                <img class="img-fluid" src="img/carousel-2.jpg" alt="estudio de agua en Argentina" loading="lazy">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-pt-5"
                     style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
-                                </h6.>
+                                <!-- <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
+                                </h6.> -->
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Perforaciones para agua
                                     potable e industrias. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
@@ -138,7 +160,7 @@
                 <div class="col-lg-6 ps-lg-0 wow fadeInLeft" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg"
-                            style="object-fit: cover;" alt="">
+                            style="object-fit: cover;" alt="maquinaria para perforación de pozos" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
@@ -181,16 +203,15 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="">
+                            <img class="img-fluid" src="img/service-1.jpg" alt="Ensayos para clasificación de Suelos, Granulometría." loading="lazy">
                         </div>
                         <h4 class="mb-3"><br>Ensayos para clasificación de Suelos, Granulometría. <br> </h4>
-
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid" src="img/service-2.jpg" alt="Límites de Atterberg." loading="lazy">
                         </div>
                         <h4 class="mb-3"> <br>Límites de Atterberg. <br> <br></h4>
 
@@ -199,7 +220,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid" src="img/service-3.jpg" alt="Ensayo SPT." loading="lazy">
                         </div>
                         <h4 class="mb-3"> <br>Ensayo SPT. <br> <br></h4>
 
@@ -208,7 +229,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-4.jpg" alt="">
+                            <img class="img-fluid" src="img/service-4.jpg" alt="Ensayos Triaxiales en suelos." loading="lazy">
                         </div>
                         <h4 class="mb-3">Ensayos Triaxiales en suelos. <br> <br> <br></h4>
 
@@ -217,7 +238,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-5.jpg" alt="">
+                            <img class="img-fluid" src="img/service-5.jpg" alt="Determinación de densidades a través de cono de arena, en suelos compactados." loading="lazy">
                         </div>
                         <h4 class="mb-3">Determinación de densidades a través de cono de arena, en suelos compactados.
                         </h4>
@@ -227,7 +248,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-6.jpg" alt="">
+                            <img class="img-fluid" src="img/service-6.jpg" alt="Determinación de Valores de Soporte, (CBR)." loading="lazy">
                         </div>
                         <h4 class="mb-3">Determinación de Valores de Soporte, (CBR). <br><br> <br></h4>
 
@@ -236,7 +257,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-7.png" alt="">
+                            <img class="img-fluid" src="img/service-7.png" alt="Ensayos de Placa de Carga Estática en Sitio sobre suelos." loading="lazy">
                         </div>
                         <h4 class="mb-3">Ensayos de Placa de Carga Estática en Sitio sobre suelos. </h4>
 
@@ -245,7 +266,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-8.jpg" alt="">
+                            <img class="img-fluid" src="img/service-8.jpg" alt="Cono de penetración dinámico (DCP)." loading="lazy">
                         </div>
                         <h4 class="mb-3">Cono de penetración dinámico (DCP). <br> <br></h4>
 
@@ -254,7 +275,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-9.jpg" alt="">
+                            <img class="img-fluid" src="img/service-9.jpg" alt="Logueo geológico y geotécnico" loading="lazy">
                         </div>
                         <h4 class="mb-3">Logueo geológico y geotécnico. <br> <br></h4>
 
@@ -340,12 +361,12 @@
         <div class="rocas">
             <h5 class="text-secondary text-uppercase mb-3">ROCAS</h5>
             <p><b>Reconocimiento y clasificación de minerales.</b></p>
-            <img src="img/rocas.jpg" alt="Rocas">
+            <img src="img/rocas.jpg" alt=" imagen microscopica de una roca" loading="lazy">
         </div>
         <div class="suelo">
             <h5 class="text-secondary text-uppercase mb-3">SUELO</h5>
             <p><b>Reconocimiento de minerales y clasificación. Difracción de Rayos X</b></p>
-            <img src="img/suelo.jpeg" alt="Suelo">
+            <img src="img/suelo.jpeg" alt="imagen microscopica de suelo" loading="lazy">
         </div>
     </div>
 
