arreglo de media query

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GEOGON - Soluciones Geológicas, Estudio de Suelo y Geotecnia</title>
 <meta name="description" content="Expertos en estudio de suelo, geotecnia y perforaciones para agua potable e industrias. Contáctanos para cotizaciones y asesoría.">
 <meta name="keywords" content="geología, estudio de suelo, geotecnia, perforaciones de agua, análisis geoquímicos, hidrología">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
