--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
                             <div class="col-10 col-lg-8">
                                 <!-- <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
                                 </h6.> -->
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Perforaciones para agua
-                                    potable e industrias. </h1>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Ubicación precisa de acuíferos con estudios geofisicos. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
                                     cotización.</p>
                                 <a href="#servicios" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
@@ -128,7 +127,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-2.jpg" alt="estudio de agua en Argentina" loading="lazy">
+                <img class="img-fluid" src="img/BusquedadeAgua-probandooo2.png" alt="estudio de agua en Argentina" loading="lazy">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-pt-5"
                     style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
@@ -136,8 +135,7 @@
                             <div class="col-10 col-lg-8">
                                 <!-- <h6. class="text-white text-uppercase mb-3 animated slideInDown">SOLUCIONES GEOLÓGICAS
                                 </h6.> -->
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Perforaciones para agua
-                                    potable e industrias. </h1>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Ubicación precisa de acuíferos con estudios geofisicos. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
                                     cotización.</p>
                                 <a href="#servicios" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
@@ -352,7 +350,7 @@
 
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s" id="mineralogia">
 
-        <h1 class="mb-5">MINERALOGÍA</h1>
+        <h1 class="mb-5">ESTUDIOS PETROGRAFICOS</h1>
         <p><b> DESCRIPCIÓN MICROSCOPICA. </b></p>
 
     </div>
