--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="#servicios" class="dropdown-item">Geotecnia</a></li>
                         <li><a href="#agua" class="dropdown-item">Agua</a></li>
-                        <li><a href="#mineralogia" class="dropdown-item">Mineralogía</a></li>
+                        <li><a href="#mineralogia" class="dropdown-item">Esudio Petrográficos</a></li>
                     </ul>
                 </div>
                 <a href="#contacto" class="nav-item nav-link">Contacto</a>
