--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Estudio de suelo, geotecnia. Ubicación precisa de acuíferos con estudios geofisicos. </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Conoce nuestros servicios y solicita una
                                     cotización.</p>
+                                    <div class="botonflex">
                                 <a href="#servicios" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Más
                                     Información</a>
                                 <a href="#contacto"
                                     class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contactanos</a>
+                                </div>
                             </div>
                         </div>
                     </div>
